Native/nanoem/ext/physics.h

/**
 * \defgroup nanoem_physics_world Physics World
 * @{
 */

/**
 * \brief Get whether the physics world extension is available
 *
 * \param opaque The opaque data
 */
NANOEM_DECL_API nanoem_bool_t APIENTRY
nanoemPhysicsWorldIsAvailable(void *opaque);
/**
 * \brief Create an opaque physics world opaque object
 *
 * \param opaque The opaque data
 * \param[in,out] status \b NANOEM_STATUS_SUCCESS is set if succeeded, otherwise sets the others
 * \remark alway returns \b NULL when ::nanoemPhysicsWorldIsAvailable is \b false
 */
NANOEM_DECL_API nanoem_physics_world_t *APIENTRY
nanoemPhysicsWorldCreate(void *opaque, nanoem_status_t *status);
/**
 * \brief Add the given opaque physics rigid body object to the associated opaque physics world object
 *
 * \param world The opaque physics world object
 * \param rigid_body The opaque physics rigid body object
 * \remark Do nothing when ::nanoemPhysicsWorldIsAvailable is \b false
 */
NANOEM_DECL_API void APIENTRY
nanoemPhysicsWorldAddRigidBody(nanoem_physics_world_t *world, nanoem_physics_rigid_body_t *rigid_body);
/**
 * \brief Add the given opaque physics soft body object to the associated opaque physics world object
 *
 * \param world The opaque physics world object
 * \param soft_body The opaque physics soft body object
 * \remark Do nothing when ::nanoemPhysicsWorldIsAvailable is \b false
 */
NANOEM_DECL_API void APIENTRY
nanoemPhysicsWorldAddSoftBody(nanoem_physics_world_t *world, nanoem_physics_soft_body_t *soft_body);
/**
 * \brief Add the given opaque physics joint object to the associated opaque physics world object
 *
 * \param world The opaque physics world object
 * \param joint The opaque physics joint object
 * \remark Do nothing when ::nanoemPhysicsWorldIsAvailable is \b false
 */
NANOEM_DECL_API void APIENTRY
nanoemPhysicsWorldAddJoint(nanoem_physics_world_t *world, nanoem_physics_joint_t *joint);
/**
 * \brief Remove the given opaque physics rigid body object from the associated opaque physics world object
 *
 * \param world The opaque physics world object
 * \param rigid_body The opaque physics rigid body object
 * \remark Do nothing when ::nanoemPhysicsWorldIsAvailable is \b false
 */
NANOEM_DECL_API void APIENTRY
nanoemPhysicsWorldRemoveRigidBody(nanoem_physics_world_t *world, nanoem_physics_rigid_body_t *rigid_body);
/**
 * \brief Remove the given opaque physics soft body object from the associated opaque physics world object
 *
 * \param world The opaque physics world object
 * \param soft_body The opaque physics soft body object
 * \remark Do nothing when ::nanoemPhysicsWorldIsAvailable is \b false
 */
NANOEM_DECL_API void APIENTRY
nanoemPhysicsWorldRemoveSoftBody(nanoem_physics_world_t *world, nanoem_physics_soft_body_t *soft_body);
/**
 * \brief Remove the given opaque physics joint object from the associated opaque physics world object
 *
 * \param world The opaque physics world object
 * \param joint The opaque physics joint object
 * \remark Do nothing when ::nanoemPhysicsWorldIsAvailable is \b false
 */
NANOEM_DECL_API void APIENTRY
nanoemPhysicsWorldRemoveJoint(nanoem_physics_world_t *world, nanoem_physics_joint_t *joint);
/**
 * \brief Set the FPS value to the given opaque physics world object
 *
 * \param world The opaque physics world object
 * \param value The value to set
 * \remark Do nothing when ::nanoemPhysicsWorldIsAvailable is \b false
 */
NANOEM_DECL_API void APIENTRY
nanoemPhysicsWorldSetPreferredFPS(nanoem_physics_world_t *world, int value);
/**
 * \brief Step simulation with delta to the opaque physics world object
 *
 * \param world The opaque physics world object
 * \param delta The delta seconds to step simulation
 * \remark Do nothing when ::nanoemPhysicsWorldIsAvailable is \b false
 */
NANOEM_DECL_API int APIENTRY
nanoemPhysicsWorldStepSimulation(nanoem_physics_world_t *world, nanoem_f32_t delta);
/**
 * \brief Reset all physics objects in the opaque physics world object
 *
 * \param world The opaque physics world object
 * \remark Do nothing when ::nanoemPhysicsWorldIsAvailable is \b false
 */
NANOEM_DECL_API void APIENTRY
nanoemPhysicsWorldReset(nanoem_physics_world_t *world);
/**
 * \brief Get the gravity vector from the given opaque physics world object
 *
 * \param world The opaque physics world object
 * \remark alway returns \b 0.0 when ::nanoemPhysicsWorldIsAvailable is \b false
 */
NANOEM_DECL_API const nanoem_f32_t * APIENTRY
nanoemPhysicsWorldGetGravity(const nanoem_physics_world_t *world);
/**
 * \brief Set the gravity vector to the given opaque physics world object
 *
 * \param world The opaque physics world object
 * \param value The value to set
 * \remark \b value must be at least 4 components float array
 * \remark Do nothing when ::nanoemPhysicsWorldIsAvailable is \b false
 */
NANOEM_DECL_API void APIENTRY
nanoemPhysicsWorldSetGravity(nanoem_physics_world_t *world, const nanoem_f32_t *value);
/**
 * \brief Get whether the world is active from the given opaque physics world object
 *
 * \param world The opaque physics world object
 * \remark alway returns \b false when ::nanoemPhysicsWorldIsAvailable is \b false
 */
NANOEM_DECL_API nanoem_bool_t APIENTRY
nanoemPhysicsWorldIsActive(const nanoem_physics_world_t *world);
/**
 * \brief Set whether the world is active to the given opaque physics world object
 *
 * \param world The opaque physics world object
 * \param value The value to set
 * \remark Do nothing when ::nanoemPhysicsWorldIsAvailable is \b false
 */
NANOEM_DECL_API void APIENTRY
nanoemPhysicsWorldSetActive(nanoem_physics_world_t *world, nanoem_bool_t value);
/**
 * \brief Destroy the given opaque physics world object
 *
 * \param world The opaque physics world object
 * \remark Do nothing when ::nanoemPhysicsWorldIsAvailable is \b false
 */
NANOEM_DECL_API void APIENTRY
nanoemPhysicsWorldDestroy(nanoem_physics_world_t *world);
/** @} */

/**
 * \defgroup nanoem_physics_rigid_body Physics Rigid Body
 * @{
 */

/**
 * \brief Create an opaque physics rigid body opaque object
 *
 * \param value The value to set
 * \param opaque The opaque data to create an opaque physics rigid body object
 * \param[in,out] status \b NANOEM_STATUS_SUCCESS is set if succeeded, otherwise sets the others
 * \remark alway returns \b NULL when ::nanoemPhysicsWorldIsAvailable is \b false
 */
NANOEM_DECL_API nanoem_physics_rigid_body_t *APIENTRY
nanoemPhysicsRigidBodyCreate(const nanoem_model_rigid_body_t *value, void *opaque, nanoem_status_t *status);
/**
 * \brief Get the world transform matrix from the given opaque physics rigid body object
 *
 * \param rigid_body The opaque physics rigid body object
 * \param[out] value The value to set
 * \remark \b value must be at least 16 components float array
 * \remark Do nothing when ::nanoemPhysicsWorldIsAvailable is \b false
 */
NANOEM_DECL_API void APIENTRY
nanoemPhysicsRigidBodyGetWorldTransform(const nanoem_physics_rigid_body_t *rigid_body, nanoem_f32_t *value);
/**
 * \brief Destroy the given opaque physics rigid body object
 *
 * \param rigid_body The opaque physics rigid body object
 * \remark Do nothing when ::nanoemPhysicsWorldIsAvailable is \b false
 */
NANOEM_DECL_API void APIENTRY
nanoemPhysicsRigidBodyDestroy(nanoem_physics_rigid_body_t *rigid_body);
/** @} */

/**
 * \defgroup nanoem_physics_joint Physics Joint
 * @{
 */

/**
 * \brief Create an opaque physics joint opaque object
 *
 * \param value The value to set
 * \param opaque The opaque data to create an opaque physics joint object
 * \param[in,out] status \b NANOEM_STATUS_SUCCESS is set if succeeded, otherwise sets the others
 * \remark alway returns \b NULL when ::nanoemPhysicsWorldIsAvailable is \b false
 */
NANOEM_DECL_API nanoem_physics_joint_t *APIENTRY
nanoemPhysicsJointCreate(const nanoem_model_joint_t *value, void *opaque, nanoem_status_t *status);
/**
 * \brief Destroy the given opaque physics joint object
 *
 * \param joint The opaque physics joint object
 * \remark Do nothing when ::nanoemPhysicsWorldIsAvailable is \b false
 */
NANOEM_DECL_API void APIENTRY
nanoemPhysicsJointDestroy(nanoem_physics_joint_t *joint);